--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ env/
 
 # Environment variables
 .env
+.env.local
 
 # IDE files
 .vscode/
@@ -30,3 +31,4 @@ env/
 # OS-specific files
 .DS_Store
 Thumbs.db
+.env
